--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,7 @@
         </div>
       </ul>
       <p appBasicHighlight>Style me with basic highlight directive</p>
-      <p appBetterHighlight>Style me with better highlight directive</p>
+      <p appBetterHighlight>Style me with better highlight directive - initial blue - hover orange - leave hover transparent</p>
       <ng-template [ngIf]="onlyOdd">
         <p>Only odd</p>
       </ng-template>
