--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
-      <button class="btn btn-primary" (click)="onlyOdd = !onlyOdd">Only show odd numbers</button>
+      <button class="btn btn-primary" (click)="onlyOdd = !onlyOdd">Only show {{numType()}} numbers</button>
       <br><br>
       <ul class="list-group">
         <div *ngIf="onlyOdd">
@@ -17,11 +17,20 @@
           </li>
         </div>
       </ul>
-      <p appBasicHighlight>Style me with basic highlight directive</p>
-      <p appBetterHighlight>Style me with better highlight directive - initial blue - hover orange - leave hover transparent</p>
+      <p appBasicHighlight>Style me with the basic highlight directive</p>
+      <p appBetterHighlight [defaultColor]="'orange'" [hoverColor]="'yellow'">Style me with the better highlight directive - initial transparent - hover orange - leave hover transparent</p>
       <ng-template [ngIf]="onlyOdd">
         <p>Only odd</p>
       </ng-template>
+      <div *appMyIf="!onlyOdd">
+        homemade structural directive - appMyIf (works like *ngIf) - only adds to DOM if onlyOdd = false
+      </div>
+      <div [ngSwitch]="value">
+        <p *ngSwitchCase="5">value is 5</p>
+        <p *ngSwitchCase="10">value is 10</p>
+        <p *ngSwitchCase="100">value is 100</p>
+        <p *ngSwitchDefault>value is default</p>
+      </div>
     </div>
   </div>
 </div>
